
* We added a method to TimedStat to time a block using try-with-resources:

    try (BlockTimer ignored = timedStat.time()) {
        ...
    }

* We added an addDiscoveredService(String type, String pool, String uri)
  method to InMemoryDiscoveryClient.

* [Bug] Fixed handling of missing content type for JSON http responses.

* We deprecated ConfigAssertions.assertDefaults().

Platform 0.74

* The new launcher status command now reports a running instance of a server
  started by the old launcher

Platform 0.73

* Applications can now use Bootstrap.withApplicationDefaults() to specify
  default configuration values.

* Upon startup, the main thread will no longer wait for the initial discovery
  announcement.

* Launcher fixes

  - Many jvm.config files were depending on the old launcher's interpreting
    spaces and other shell metacharacters. The launcher will now print an
    error message and refuse to start if the jvm.config file contains spaces
    or shell quotes, unless the jvm.config file contains the comment
    "# allow spaces".

  - The new launcher can now shut down a server started by the old launcher.

  - [Bug] The new launcher can now more reliably find the installation directory.

* [Bug] Don't create javadoc on non-release builds.

* Maven plugin upgrades

 - maven-resources-plugin 2.6
 - maven-source-plugin 2.2.1
 - maven-surefire-plugin 2.14

Platform 0.72

Temporarily allow event names to start with lowercase letters, etc.

Platform 0.71

* Log rotation changes

The HTTP request log is now uses the same log rotation semantics as the server
log. The request log rotation is configured using the new
"http-server.log.max-size" and "http-server.log.max-history" configuration
options. The old "http-server.log.retention-time" configuration option is
deprecated and does nothing.

The "log.max-size" configuration option takes a DataSize and replaces the
now-legacy "log.max-size-in-bytes" option.

* Launcher reimplemented in Java
